chore(env): add .env.example

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,12 @@ __pycache__/
 # 💻 Virtual environments
 # ───────────────────────────────
 venv/
-.env/
+
+# ───────────────────────────────
+# 🔐 Environment and secrets
+# ───────────────────────────────
+.env
+.env.*
+!.env.example
 .envrc
+*.secret
