chore: add requirements file

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@ venv/
 !.env.example
 .envrc
 *.secret
+
+# ───────────────────────────────
+# 💻 IDE/editor configuration
+# ───────────────────────────────
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
