chore(gitignore): extend rules for FastAPI projects

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,15 @@ venv/
 *.secret
 
 # ───────────────────────────────
+# ⚡ FastAPI / Uvicorn
+# ───────────────────────────────
+*.db
+*.sqlite3
+*.log
+instance/
+uploads/
+
+# ───────────────────────────────
 # 💻 IDE/editor configuration
 # ───────────────────────────────
 .vscode/
